Fix CWE-470 unsafe reflection in ORecordSerializerNetworkV37
The binary network record deserializer resolved and instantiated an
arbitrary, attacker-named class from the wire via
Class.forName(name).newInstance() in both the EMBEDDED and CUSTOM
branches, running the class static initializer and no-arg constructor
before any type check and before the request's session token is
validated. A network peer reaching the binary protocol port could
trigger arbitrary classpath-class instantiation pre-authentication
(deserialization-gadget RCE primitive).

Resolve the class without initialization (Class.forName(name, false,
loader)) and verify membership (isAssignableFrom against
ODocumentSerializable / OSerializableStream) before instantiation, so a
class that does not implement the expected serialization interface is
rejected before its static initializer or constructor can run.